--- a/package.json
+++ b/package.json
@@ -9,25 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "better-sqlite3": "^9.2.2",
+    "is-hotkey": "^0.2.0",
     "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "better-sqlite3": "^9.2.2",
     "slate": "^0.118.0",
-    "slate-react": "^0.118.2",
-    "is-hotkey": "^0.2.0"
+    "slate-react": "^0.118.2"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.8",
+    "@types/is-hotkey": "^0.1.10",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/better-sqlite3": "^7.6.8",
-    "typescript": "^5.0.0",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
-
