--- a/package.json
+++ b/package.json
@@ -10,16 +10,14 @@
   },
   "dependencies": {
     "better-sqlite3": "^9.2.2",
-    "is-hotkey": "^0.2.0",
     "next": "^14.0.0",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "slate": "^0.118.0",
-    "slate-react": "^0.118.2"
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
-    "@types/is-hotkey": "^0.1.10",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
