--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.10.0",
     "better-sqlite3": "^9.2.2",
     "next": "^14.0.0",
     "quill": "^1.3.7",
