--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.3.0",
     "better-sqlite3": "^9.2.2",
     "next": "^14.0.0",
     "postgres": "^3.4.7",
