--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.3.0",
+    "@radix-ui/react-slot": "^1.2.4",
     "better-sqlite3": "^9.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.562.0",
     "next": "^14.0.0",
     "postgres": "^3.4.7",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0"
+    "react-quill": "^2.0.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.8",
